--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <!-- Title -->
+    <!-- Meat tags for search engines -->
+    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running. trail running. Dublin Docklands. Phoenix park.">"  
+    <meta name="keywords" content="love running, running club, runners, Ireland, Dublin, sport, exercise.">"
+    <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon-zip/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-zip/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-zip/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-zip/apple-touch-icon.png/fav.icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-zip/favicon-32x32.png/fav.icon">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-zip/favicon-16x16.png/fav.icon">
 </head>
 <body>
     
