create general page structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-zip/favicon-32x32.png/fav.icon">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-zip/favicon-16x16.png/fav.icon">
 </head>
+
 <body>
-    
+    <!-- Header -->
+ <header>Header</header>
+ <!-- Main -->
+<main>Main</main>
+<!-- Footer -->
+<footer>Footer</footer>
 </body>
+
+ 
 </html>
