add lato foont-family to body styles

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicon-zip/apple-touch-icon.png/fav.icon">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-zip/favicon-32x32.png/fav.icon">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-zip/favicon-16x16.png/fav.icon">
+    
 </head>
 
 <body>
     <!-- Header -->
- <header>Header</header>
+ <header>
+    <a href="index.html">
+        <h1 id="logo">Love Running</h1>
+    </a>
+ </header>
  <!-- Main -->
 <main>Main</main>
 <!-- Footer -->
