--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     <a href="index.html">
         <h1 id="logo">Love Running</h1>
     </a>
+    <nav>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Gallery</a></li>
+            <li><a href="">Sign Up</a></li>
+        </ul>
+    </nav>
+        <ul>
+            
+        </ul>
  </header>
  <!-- Main -->
 <main>Main</main>
