--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <h1 id="logo">Love Running</h1>
     </a>
     <nav>
-        <ul>
-            <li><a href="">Home</a></li>
+        <ul id="menu">
+            <li><a class="active" href="">Home</a></li>
             <li><a href="">Gallery</a></li>
             <li><a href="">Sign Up</a></li>
         </ul>
