--- a/index.html
+++ b/index.html
@@ -21,19 +21,21 @@
     <a href="index.html">
         <h1 id="logo">Love Running</h1>
     </a>
+    <input type="checkbox" id="nav-toggle" name="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <span></span>
+        <span></span>
+        <span></span>
     <nav>
         <ul id="menu">
             <li><a class="active" href="">Home</a></li>
             <li><a href="">Gallery</a></li>
             <li><a href="">Sign Up</a></li>
         </ul>
-    </nav>
-        <ul>
-            
-        </ul>
+        </nav>
  </header>
  <!-- Main -->
-<main>Main</main>
+<main>Main Content</main>
 <!-- Footer -->
 <footer>Footer</footer>
 <link rel="stylesheet" href="assets/css/style.css">
