--- a/index.html
+++ b/index.html
@@ -1,45 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Meat tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running. trail running. Dublin Docklands. Phoenix park.">"  
-    <meta name="keywords" content="love running, running club, runners, Ireland, Dublin, sport, exercise.">"
+    <meta
+      name="description"
+      content="Love Running. Club for runners in Dublin, Ireland. Urban running. trail running. Dublin Docklands. Phoenix park."
+    />
+    "
+    <meta
+      name="keywords"
+      content="love running, running club, runners, Ireland, Dublin, sport, exercise."
+    />
+    "
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon-zip/apple-touch-icon.png/fav.icon">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-zip/favicon-32x32.png/fav.icon">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-zip/favicon-16x16.png/fav.icon">
-    
-</head>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="favicon-zip/apple-touch-icon.png/fav.icon"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="favicon-zip/favicon-32x32.png/fav.icon"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="favicon-zip/favicon-16x16.png/fav.icon"
+    />
+  </head>
 
-<body>
+  <body>
     <!-- Header -->
- <header>
-    <a href="index.html">
+    <header>
+      <a href="index.html">
         <h1 id="logo">Love Running</h1>
-    </a>
-    <input type="checkbox" id="nav-toggle" name="nav-toggle">
-    <label for="nav-toggle" class="nav-toggle-label">X</label>
-        <span></span>
-        <span></span>
-        <span></span>
-    <nav>
+      </a>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <span></span>
+      <span></span>
+      <span></span>
+      <nav>
         <ul id="menu">
-            <li><a class="active" href="">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Sign Up</a></li>
+          <li><a class="active" href="">Home</a></li>
+          <li><a href="">Gallery</a></li>
+          <li><a href="">Sign Up</a></li>
         </ul>
-        </nav>
- </header>
- <!-- Main -->
-<main>Main Content</main>
-<!-- Footer -->
-<footer>Footer</footer>
-<link rel="stylesheet" href="assets/css/style.css">
-</body>
-
- 
+      </nav>
+    </header>
+    <!-- Main -->
+    <main>Main Content</main>
+    <!-- Footer -->
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"
+            >Facebook</a
+          >
+        </li>
+      </ul>
+    </footer>
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </body>
 </html>
+s
