add fontawesome and first link

--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
             target="_blank"
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
-            >Facebook</a
+            ><i class="fa-brands fa-facebook"></i></a
           >
         </li>
       </ul>
     </footer>
     <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/b5d0288ba6.js" crossorigin="anonymous"></script>
   </body>
 </html>
-s
