--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <i class="fa-solid fa-bars"></i>
       <span></span>
       <span></span>
       <span></span>
@@ -67,6 +68,33 @@
             rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"
             ><i class="fa-brands fa-facebook"></i></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://x.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our x/twitter page (opens in a new tab)"
+            ><i class="i class="fa-brands fa-x-twitter"></i>"</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.youtube.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our Youtube page (opens in a new tab)"
+            ><i class="fa-brands fa-youtube"></i></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit our instagram page (opens in a new tab)"
+            ><i class="fa-brands fa-instagram"></i></a
           >
         </li>
       </ul>
