--- a/index.html
+++ b/index.html
@@ -1,39 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Meat tags for search engines -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
     <meta
       name="description"
-      content="Love Running. Club for runners in Dublin, Ireland. Urban running. trail running. Dublin Docklands. Phoenix park."
-    />
-    "
+      content="Love Running. Club for runners in Dublin, Ireland. Urban running. trail running. Dublin Docklands. Phoenix park.">
     <meta
       name="keywords"
-      content="love running, running club, runners, Ireland, Dublin, sport, exercise."
-    />
-    "
+      content="love running, running club, runners, Ireland, Dublin, sport, exercise."/>
+
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="favicon-zip/apple-touch-icon.png/fav.icon"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="favicon-zip/favicon-32x32.png/fav.icon"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="favicon-zip/favicon-16x16.png/fav.icon"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon-zip/apple-touch-icon.png/fav.icon"/>
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-zip/favicon-32x32.png/fav.icon"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-zip/favicon-16x16.png/fav.icon"/>
+    <link rel="stylesheet" href="assets/css/style.css"/>
   </head>
 
   <body>
@@ -45,9 +29,6 @@
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
       <label for="nav-toggle" class="nav-toggle-label">X</label>
       <i class="fa-solid fa-bars"></i>
-      <span></span>
-      <span></span>
-      <span></span>
       <nav>
         <ul id="menu">
           <li><a class="active" href="">Home</a></li>
@@ -63,43 +44,36 @@
       <ul id="social networks">
         <li>
           <a
-            href="https://www.facebook.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Visit our Facebook page (opens in a new tab)"
-            ><i class="fa-brands fa-facebook"></i></a
-          >
-        </li>
+            href="https://www.facebook.com/" target="_blank"
+            rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"
+            ><i class="fa-brands fa-facebook"></i></a>
+          </li>
         <li>
           <a
-            href="https://x.com/"
-            target="_blank"
-            rel="noopener"
+            href="https://x.com/" target="_blank" rel="noopener"
             aria-label="Visit our x/twitter page (opens in a new tab)"
-            ><i class="i class="fa-brands fa-x-twitter"></i>"</a
-          >
+            ><i class="i class="fa-brands fa-x-twitter></i></a>
         </li>
         <li>
           <a
-            href="https://www.youtube.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Visit our Youtube page (opens in a new tab)"
-            ><i class="fa-brands fa-youtube"></i></a
-          >
+            href="https://www.youtube.com/" target="_blank"
+            rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)">
+            <i class="fa-brands fa-youtube"></i></a>
         </li>
         <li>
           <a
-            href="https://www.instagram.com/"
-            target="_blank"
-            rel="noopener"
-            aria-label="Visit our instagram page (opens in a new tab)"
-            ><i class="fa-brands fa-instagram"></i></a
-          >
+            href="https://www.instagram.com/" target="_blank"
+            rel="noopener" aria-label="Visit our instagram page (opens in a new tab)">
+            <i class="fa-brands fa-instagram"></i></a >
+        </li>
+        <li> 
+          <a href="https://x.com/" target="_blank"
+            rel="noopener" aria-label="Visit our x/twitter page (opens in a new tab)">
+            <i class="fa-brands fa-x-twitter"></i></a>
         </li>
       </ul>
     </footer>
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/style.css"/>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/b5d0288ba6.js" crossorigin="anonymous"></script>
   </body>
