--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="styles.css/favicon-zip/favicon-16x16.png/fav.icon"/>
     <link rel="stylesheet" href="/Users/liam/Desktop/favicon-zip"/>
   </head>
-
+/Users/liam/Desktop/favicon-zip
   <body>
     <!-- Header -->
     <header>
@@ -30,9 +30,9 @@
     </label>
       <nav>
         <ul id="menu">
-          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="signup.html">Sign Up</a></li>
+          <li><a href="signup.html" class="active">Sign Up</a></li>
         </ul>
       </nav>
     </header>
