check code for bugs

--- a/gallery.html
+++ b/gallery.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
     <meta name="description"
-      content="Love Running. Club for runners in Dublin, Ireland. Urban running. trail running. Dublin Docklands. Phoenix park.">
-    <meta name="keywords" content="love running, running club, runners, Ireland, Dublin, sport, exercise.">
+      content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin Docklands. Phoenix park.">
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
 
     <!-- Title -->
     <title>Love Running</title>
@@ -45,10 +45,6 @@
             rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
             <i class="fa-brands fa-facebook"></i></a>
       </li>
-        <li><a href="https://x.com/" target="_blank" rel="noopener"
-            aria-label="Visit our x/twitter page (opens in a new tab)"
-            ><i class="i class="fa-brands fa-x-twitter></i></a>
-        </li>
         <li><a href="https://www.youtube.com/" target="_blank"
             rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)">
             <i class="fa-brands fa-youtube"></i></a>
