--- a/index.html
+++ b/index.html
@@ -1,70 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Meta tags for search engines -->
-    <meta name="description"
-      content="Love Running. Club for runners in Dublin, Ireland. Urban running. trail running. Dublin Docklands. Phoenix park.">
-    <meta name="keywords" content="love running, running club, runners, Ireland, Dublin, sport, exercise.">
 
-    <!-- Title -->
-    <title>Love Running</title>
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="styles.css/favicon-zip/apple-touch-icon.png/fav.icon"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="styles.css/favicon-zip/favicon-32x32.png/fav.icon"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="styles.css/favicon-zip/favicon-16x16.png/fav.icon"/>
-    <link rel="stylesheet" href="assets/css/style.css"/>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Meta tags for search engines -->
+  <meta name="description"
+    content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin Docklands. Phoenix park.">
+  <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
 
-  <body>
-    <!-- Header -->
-    <header>
-      <a href="index.html">
-        <h1 id="logo">Love Running</h1>
-      </a>
-      <input type="checkbox" id="nav-toggle" name="nav-toggle">
-      <label for="nav-toggle" class="nav-toggle-label">
+  <!-- Title -->
+  <title>Love Running</title>
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png/fav.icon" />
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png/fav.icon" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+
+<body>
+  <!-- Header -->
+  <header>
+    <a href="index.html">
+      <h1 id="logo">Love Running</h1>
+    </a>
+    <input type="checkbox" id="nav-toggle" name="nav-toggle">
+    <label for="nav-toggle" class="nav-toggle-label">
       <i class="fa-solid fa-bars"></i>
     </label>
-      <nav>
-        <ul id="menu">
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="signup.html">Sign Up</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!-- Main -->
-    <main>main content</main>
-    <!-- Footer -->
-    <footer>
-      <ul id="social networks">
-        <li><a href="https://www.facebook.com/" target="_blank"
-            rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
-            <i class="fa-brands fa-facebook"></i></a>
-      </li>
-        <li><a href="https://x.com/" target="_blank" rel="noopener"
-            aria-label="Visit our x/twitter page (opens in a new tab)"
-            ><i class="i class="fa-brands fa-x-twitter></i></a>
-        </li>
-        <li><a href="https://www.youtube.com/" target="_blank"
-            rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)">
-            <i class="fa-brands fa-youtube"></i></a>
-        </li>
-        <li><a href="https://www.instagram.com/" target="_blank"
-            rel="noopener" aria-label="Visit our instagram page (opens in a new tab)">
-            <i class="fa-brands fa-instagram"></i></a >
-        </li>
-        <li><a href="https://x.com/" target="_blank"
-            rel="noopener" aria-label="Visit our x/twitter page (opens in a new tab)">
-            <i class="fa-brands fa-x-twitter"></i></a>
-        </li>
+    <nav>
+      <ul id="menu">
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="signup.html">Sign Up</a></li>
       </ul>
-    </footer>
-    <link rel="stylesheet" href="assets/css/style.css"/>
-    <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/b5d0288ba6.js" crossorigin="anonymous"></script>
-  </body>
+    </nav>
+  </header>
+  <!-- Main -->
+  <main>main content</main>
+  <!-- Footer -->
+  <footer>
+    <ul id="social networks">
+      <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
+          aria-label="Visit our Facebook page (opens in a new tab)">
+          <i class="fa-brands fa-facebook"></i></a>
+      </li>
+      <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+          aria-label="Visit our Youtube page (opens in a new tab)">
+          <i class="fa-brands fa-youtube"></i></a>
+      </li>
+      <li><a href="https://www.instagram.com/" target="_blank" rel="noopener"
+          aria-label="Visit our instagram page (opens in a new tab)">
+          <i class="fa-brands fa-instagram"></i></a>
+      </li>
+      <li><a href="https://x.com/" target="_blank" rel="noopener"
+          aria-label="Visit our x/twitter page (opens in a new tab)">
+          <i class="fa-brands fa-x-twitter"></i></a>
+      </li>
+    </ul>
+  </footer>
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/b5d0288ba6.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
