--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <main>main content</main>
   <!-- Footer -->
   <footer>
-    <ul id="social networks">
+    <ul id="social-networks">
       <li><a href="https://www.facebook.com/" target="_blank" rel="noopener"
           aria-label="Visit our Facebook page (opens in a new tab)">
           <i class="fa-brands fa-facebook"></i></a>
@@ -60,7 +60,7 @@
       </li>
     </ul>
   </footer>
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/style.css"/>
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/b5d0288ba6.js" crossorigin="anonymous"></script>
 </body>
