--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
     </nav>
   </header>
   <!-- Main -->
-  <main>main content</main>
+  <main>
+    <section id="hero"></section>>
+
+   
+  </main>
   <!-- Footer -->
   <footer>
     <ul id="social-networks">
