add cover text to image

--- a/gallery.html
+++ b/gallery.html
@@ -37,7 +37,7 @@
       </nav>
     </header>
     <!-- Main -->
-    <main>main content</main>
+    <main></main>
     <!-- Footer -->
     <footer>
       <ul id="social-networks">
