--- a/index.html
+++ b/index.html
@@ -74,9 +74,39 @@
         </div>
       </div>
     </section>
-    
-
-   
+    <!-- Meetup Times section-->
+    <section id="meetups"></section>
+    <h2>Meet-up Times</h2>
+    <div id="div-times">
+      <div>
+        <h3>Urban <i class="fa-solid fa-city"></i></h3>
+        <p>Monday</p>
+        <p>5K</p>
+        <p>The Marker Hotel</p>
+        <p>18:30</p>
+    </div>
+    <div>
+        <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+        <p>Wednesday</p>
+        <p>10K</p>
+        <p>The Phoenix Park</p>
+        <p>18:30</p>
+    </div>
+    <div>
+        <h3>Urban <i class="fa-solid fa-city"></i></h3>
+        <p>Friday</p>
+        <p>5K</p>
+        <p>The Marker Hotel</p>
+        <p>18:30</p>
+    </div>
+    <div>
+        <h3>Trail <i class="fa-solid fa-tree"></i></h3>
+        <p>Saturday</p>
+        <p>10K</p>
+        <p>The Phoenix Park</p>
+        <p>09:30</p>
+    </div>
+    </div>
   </main>
   <!-- Footer -->
   <footer>
