style meet up times

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     <!-- Meetup Times section-->
     <section id="meetups"></section>
     <h2>Meet-up Times</h2>
-    <div id="div-times">
-      <div>
+    <div id="times">
+      <div id="div-times">
         <h3>Urban <i class="fa-solid fa-city"></i></h3>
         <p>Monday</p>
         <p>5K</p>
@@ -106,6 +106,13 @@
         <p>The Phoenix Park</p>
         <p>09:30</p>
     </div>
+    <div>
+      <h3>Coffee <i class="fa-solid fa-mug-hot"></i></h3>
+      <p>Sunday</p>
+      <p>0K</p>
+      <p>The Marker Hotel</p>
+      <p>11:30</p>
+  </div>
     </div>
   </main>
   <!-- Footer -->
