--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
     <!-- Meetup Times section-->
     <section id="meetups"></section>
-    <h2>Meet-up Times</h2>
+    <h2 class="hidden-heading">Meet-up Times</h2>
     <div id="times">
       <div id="div-times">
         <h3>Urban <i class="fa-solid fa-city"></i></h3>
