delete extra code from favicon root file names

--- a/signup.html
+++ b/signup.html
@@ -12,10 +12,10 @@
     <!-- Title -->
     <title>Love Running</title>
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="styles.css/favicon-zip/apple-touch-icon.png/fav.icon"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="styles.css/favicon-zip/favicon-32x32.png/fav.icon"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="styles.css/favicon-zip/favicon-16x16.png/fav.icon"/>
-    <link rel="stylesheet" href="/Users/liam/Desktop/favicon-zip"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="styles.css/favicon-zip/apple-touch-icon.png/fav.icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="styles.css/favicon-zip/favicon-32x32.png/fav.icon">
+    <link rel="icon" type="image/png" sizes="16x16" href="styles.css/favicon-zip/favicon-16x16.png/fav.icon">
+    <link rel="stylesheet" href="/Users/liam/Desktop/favicon-zip">
   </head>
 /Users/liam/Desktop/favicon-zip
   <body>
