--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <!-- Title -->
   <title>Love Running</title>
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png/fav.icon" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png/fav.icon" />
-  <link rel="stylesheet" href="assets/css/style.css"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png/fav.icon">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png/fav.icon">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
